tests/ui/symbol-names/const-generics-str-demangling.stderr
error: symbol-name(_RMCsCRATE_HASH_1cINtB<REF>_3StrKRe616263_E)
  --> $DIR/const-generics-str-demangling.rs:9:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<c[HASH]::Str<"abc">>)
  --> $DIR/const-generics-str-demangling.rs:9:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<c::Str<"abc">>)
  --> $DIR/const-generics-str-demangling.rs:9:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RMs_CsCRATE_HASH_1cINtB<REF>_3StrKRe27_E)
  --> $DIR/const-generics-str-demangling.rs:15:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<c[HASH]::Str<"'">>)
  --> $DIR/const-generics-str-demangling.rs:15:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<c::Str<"'">>)
  --> $DIR/const-generics-str-demangling.rs:15:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RMs0_CsCRATE_HASH_1cINtB<REF>_3StrKRe090a_E)
  --> $DIR/const-generics-str-demangling.rs:21:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<c[HASH]::Str<"\t\n">>)
  --> $DIR/const-generics-str-demangling.rs:21:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<c::Str<"\t\n">>)
  --> $DIR/const-generics-str-demangling.rs:21:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RMs1_CsCRATE_HASH_1cINtB<REF>_3StrKRee28882c3bc_E)
  --> $DIR/const-generics-str-demangling.rs:27:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<c[HASH]::Str<"âˆ‚Ã¼">>)
  --> $DIR/const-generics-str-demangling.rs:27:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<c::Str<"âˆ‚Ã¼">>)
  --> $DIR/const-generics-str-demangling.rs:27:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RMs2_CsCRATE_HASH_1cINtB<REF>_3StrKRee183a1e18390e183ade1839be18394e1839ae18390e183935fe18392e18394e1839be183a0e18398e18394e1839ae183985fe183a1e18390e18393e18398e1839ae18398_E)
  --> $DIR/const-generics-str-demangling.rs:33:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<c[HASH]::Str<"áƒ¡áƒáƒ­áƒ›áƒ”áƒšáƒáƒ“_áƒ’áƒ”áƒ›áƒ áƒ˜áƒ”áƒšáƒ˜_áƒ¡áƒáƒ“áƒ˜áƒšáƒ˜">>)
  --> $DIR/const-generics-str-demangling.rs:33:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<c::Str<"áƒ¡áƒáƒ­áƒ›áƒ”áƒšáƒáƒ“_áƒ’áƒ”áƒ›áƒ áƒ˜áƒ”áƒšáƒ˜_áƒ¡áƒáƒ“áƒ˜áƒšáƒ˜">>)
  --> $DIR/const-generics-str-demangling.rs:33:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RMs3_CsCRATE_HASH_1cINtB<REF>_3StrKRef09f908af09fa688f09fa686f09f90ae20c2a720f09f90b6f09f9192e29895f09f94a520c2a720f09fa7a1f09f929bf09f929af09f9299f09f929c_E)
  --> $DIR/const-generics-str-demangling.rs:39:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<c[HASH]::Str<"ðŸŠðŸ¦ˆðŸ¦†ðŸ® Â§ ðŸ¶ðŸ‘’â˜•ðŸ”¥ Â§ ðŸ§¡ðŸ’›ðŸ’šðŸ’™ðŸ’œ">>)
  --> $DIR/const-generics-str-demangling.rs:39:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<c::Str<"ðŸŠðŸ¦ˆðŸ¦†ðŸ® Â§ ðŸ¶ðŸ‘’â˜•ðŸ”¥ Â§ ðŸ§¡ðŸ’›ðŸ’šðŸ’™ðŸ’œ">>)
  --> $DIR/const-generics-str-demangling.rs:39:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 18 previous errors

